--- a/app/src/main/res/values/attrs_home_tab_host.xml
+++ b/app/src/main/res/values/attrs_home_tab_host.xml
@@ -1,8 +1,11 @@
 <resources>
     <declare-styleable name="HomeTabHost">
-        <attr name="exampleString" format="string" />
+
+        <attr name="tabIds" format="reference" />
+    </declare-styleable>
+
+    <!-- <attr name="exampleString" format="string" />
         <attr name="exampleDimension" format="dimension" />
         <attr name="exampleColor" format="color" />
-        <attr name="exampleDrawable" format="color|reference" />
-    </declare-styleable>
+        <attr name="exampleDrawable" format="color|reference" />-->
 </resources>
