--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@null</item>
-        <item name="android:padding">0dp</item>
-        <item name="android:drawablePadding">@dimen/home_tab_drawable_pad</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:drawablePadding">-17dp</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
