--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="white">#FFFFFF</color>
     <color name="orange">#EF5F3D</color>
     <color name="gray_bg">#eeeeee</color>
-    <color name="tab_gray_divide">#BEBEBE</color>
+    <color name="tab_gray_divide">#cccccc</color>
+    <color name="black_font">#1f1f1f</color>
+    <color name="gray_font">#9A9A9A</color>
+
 </resources>
