--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,18 @@
         <item name="android:orientation">horizontal</item>
     </style>
 
+    <style name="style_title_bar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/head_height</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="style_title_font">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:textColor">@color/black_font</item>
+        <item name="android:textSize">21sp</item>
+    </style>
+
 </resources>
