--- a/app/src/main/res/layout/activity_base_layout.xml
+++ b/app/src/main/res/layout/activity_base_layout.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/live_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="true"
-    android:id="@+id/live_content"
-    android:fitsSystemWindows="true">
-
-</FrameLayout>
+    android:fitsSystemWindows="true"></FrameLayout>
