--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sohu.live56.view.main.live.LiveFrag">
+    tools:context="com.sohu.live56.view.main.player.LiveFrag">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
