--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,11 @@
         <item name="android:textSize">@dimen/font_item_13</item>
     </style>
 
+    <style name="font_13_w">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/font_item_13</item>
+    </style>
+
     <style name="style_13_single_text" parent="style_13_text">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
@@ -64,9 +69,21 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="font_16_o_text">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/btn_pink</item>
+    </style>
+
     <style name="font_12_w_text">
         <item name="android:textSize">@dimen/font_name_12</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="font_12_b_text">
+        <item name="android:textSize">@dimen/font_name_12</item>
+        <item name="android:textColor">@color/black_font</item>
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
     </style>
@@ -96,6 +113,84 @@
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
         <item name="android:paddingTop">10dp</item>
+    </style>
+
+    <style name="style_dialog_tiltl">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black_font</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="dialog_share_item">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">10dp</item>
+    </style>
+
+    <style name="style_dialog_tr">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingLeft">40dp</item>
+        <item name="android:paddingRight">40dp</item>
+        <item name="android:paddingTop">25dp</item>
+    </style>
+
+    <style name="style_login_icon" parent="style_13_text">
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="style_18_b_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black_font</item>
+        <item name="android:textSize">@dimen/font_18</item>
+    </style>
+
+    <style name="style_18_w_tv">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/font_18</item>
+    </style>
+
+    <style name="style_login_et" parent="style_login_et_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+    </style>
+
+    <style name="style_login_et_text">
+        <item name="android:background">@null</item>
+        <item name="android:drawablePadding">15dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColorHint">@color/hint_font</item>
+        <item name="android:textSize">@dimen/font_16</item>
+    </style>
+
+    <style name="style_divide_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:background">@color/tab_gray_divide</item>
+    </style>
+
+    <style name="login_input_area">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="style_login_btn" parent="style_18_w_tv">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:background">@drawable/orange_btn_sel</item>
     </style>
 
 </resources>
