--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -1,13 +1,39 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sohu.live56.view.main.player.LiveFrag">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/live_localtion_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/gray_text_bg"
+        android:drawableLeft="@mipmap/live_location"
+        android:drawablePadding="5dp"
+        android:orientation="horizontal"
+        android:padding="7dp"
+        android:text="乌鲁木齐"
+        android:textColor="@color/white"
+        android:textSize="12sp" />
 
-</FrameLayout>
+
+    <ImageButton
+        android:id="@+id/video_frag_close"
+        style="@style/style_video_close_btn"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:src="@drawable/close_sel" />
+
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:button="@null" />
+
+</RelativeLayout>
