--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -169,6 +169,7 @@
         <item name="android:drawablePadding">15dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColorHint">@color/hint_font</item>
+        <item name="android:textColor">@color/black_font</item>
         <item name="android:textSize">@dimen/font_16</item>
     </style>
 
@@ -180,6 +181,13 @@
 
     <style name="style_divide_line">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:background">@color/tab_gray_divide</item>
+    </style>
+
+    <style name="style_divide_line_weight">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:layout_height">1px</item>
         <item name="android:background">@color/tab_gray_divide</item>
     </style>
@@ -221,6 +229,33 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:hint">@string/un_input</item>
         <item name="android:colorBackgroundCacheHint">@color/hint_font</item>
+    </style>
+
+    <style name="style_center_link_icon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+
+    <style name="style_live_lv">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:divider">@null</item>
+        <item name="android:dividerHeight">10dp</item>
+    </style>
+
+    <style name="style_video_close_btn">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:background">@null</item>
+        <item name="android:paddingBottom">15dp</item>
+        <item name="android:paddingLeft">15dp</item>
     </style>
 
 </resources>
