--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="gray_font">#9A9A9A</color>
     <color name="alpha_list_bg">#aaffffff</color>
     <color name="alaha_edit_bg">#aa020202</color>
+    <color name="live_etit_bg">#020202</color>
     <color name="text_gray_bg">#2b2c19</color>
     <color name="blue">#0000ff</color>
     <color name="purple_dark">#8a5a75</color>
