--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,15 +26,163 @@
     <ImageButton
         android:id="@+id/video_frag_close"
         style="@style/style_video_close_btn"
-        android:paddingRight="10dp"
+        android:paddingRight="12dp"
         android:paddingTop="10dp"
         android:src="@drawable/close_sel" />
 
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/live_camera_ib"
+        style="@style/style_live_switch_btn"
+        android:layout_below="@id/video_frag_close"
+        android:layout_marginTop="140dp"
         android:background="@null"
-        android:button="@null" />
+        android:src="@drawable/camar_sel" />
+
+    <com.sohu.live56.view.util.JchSwitchButton
+        android:id="@+id/live_voice_sb"
+        style="@style/style_live_switch_btn"
+        android:layout_below="@id/live_camera_ib"
+        android:layout_marginTop="15dp"
+        app:offBtn="@drawable/voice_close_sel"
+        app:onBtn="@drawable/voice_open_sel"
+        app:switch_flage="true" />
+
+    <com.sohu.live56.view.util.JchSwitchButton
+        android:id="@+id/live_flishlight_sb"
+        style="@style/style_live_switch_btn"
+        android:layout_below="@id/live_voice_sb"
+        android:layout_marginTop="15dp"
+        app:offBtn="@drawable/flishlight_close_sel"
+        app:onBtn="@drawable/flishlight_open_sel"
+        app:switch_flage="false" />
+
+    <RelativeLayout
+        android:id="@+id/live_btm_fl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/alaha_edit_bg"
+        android:paddingBottom="10dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="10dp">
+
+
+        <TextView
+            android:id="@+id/live_time_tv"
+            style="@style/font_15_w_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+
+
+        <com.sohu.live56.view.util.LiveButton
+            android:id="@+id/live_state_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:pause_src="@mipmap/homepage_bottom_live_pause"
+            app:play_src="@mipmap/homepage_bottom_live_in"
+            app:prepare_src="@mipmap/homepage_bottom_live_press" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/live_btm_title_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/live_btm_fl"
+        android:background="@color/alaha_edit_bg"
+        android:orientation="vertical"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="17dp">
+
+        <EditText
+            style="@style/font_15_w_text"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/live_title_bg"
+            android:gravity="center"
+            android:hint="@string/live_title_hint"
+            android:textColorHint="@color/gray_bg" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <View style="@style/style_divide_line_weight" />
+
+            <TextView
+                style="@style/font_12_w_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/share_to" />
+
+            <View style="@style/style_divide_line_weight" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingTop="12dp">
+
+            <View style="@style/style_width_weight_line" />
+
+
+            <ImageView
+                android:id="@+id/live_weixin_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/weixin" />
+
+            <View style="@style/style_width_weight_line" />
+
+            <ImageView
+                android:id="@+id/live_friends_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/circle" />
+
+            <View style="@style/style_width_weight_line" />
+
+            <ImageView
+                android:id="@+id/live_microblog_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/weibo" />
+
+            <View style="@style/style_width_weight_line" />
+
+            <ImageView
+                android:id="@+id/live_qq_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/qq" />
+
+            <View style="@style/style_width_weight_line" />
+
+            <ImageView
+                android:id="@+id/live_zone_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/qqzone" />
+
+            <View style="@style/style_width_weight_line" />
+
+        </LinearLayout>
+
+        <View
+            style="@style/style_divide_line_weight"
+            android:layout_marginTop="10dp" />
+    </LinearLayout>
+
 
 </RelativeLayout>
