--- a/app/src/main/res/layout/activity_palyer_layout.xml
+++ b/app/src/main/res/layout/activity_palyer_layout.xml
@@ -3,15 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<android.opengl.GLSurfaceView-->
-    <!--android:id="@+id/glview_call"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" />-->
-
-    <View
+    <android.opengl.GLSurfaceView
+        android:id="@+id/glview_call"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/orange" />
+        android:layout_height="match_parent" />
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@color/orange" />-->
 
     <FrameLayout
         android:id="@+id/player_frag_content"
