--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -99,6 +99,7 @@
         android:paddingTop="17dp">
 
         <EditText
+            android:id="@+id/live_title_et"
             style="@style/font_15_w_text"
             android:layout_width="match_parent"
             android:layout_height="40dp"
